package Seminar4.Armor;

public interface Armor {
    int protection ();
}
