package Seminar4.weapons;
/*
2. Создать интерфейс Weapon с методом damage(), который будет показывать наносимый урон оружием.
   В классе Warrior добавить метод hit(), который на основе метода от Weapon.damage() будет считать,
   сколько урона нанес воин сопернику (воин может и промахнуться)
 */
public interface Weapon {
    int damage ();
}
