package Seminar4.weapons.meleeWeapon;

import Seminar4.weapons.Weapon;

public interface Melee extends Weapon{

}
