package Seminar4.weapons.rangedWeapon;

import Seminar4.weapons.Weapon;

public interface Ranged extends Weapon {
    int distance();
}
